2007-09-08  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, cancel reconnecting should be enabled in connecting.

2007-09-08  Satoshi Nakagawa <artension@gmail.com>

	Released 0.9.6.

2007-09-08  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, single-line text with a new line on the tail should be treated as single-line text in pasting.

2007-09-08  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, URL should be unescaped on copy from right click menu.

2007-09-07  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, paste dialog should be showed when clipboard has multi-line text.

2007-09-05  Satoshi Nakagawa <artension@gmail.com>

 	Completed nick right-click menu on log views.

2007-09-04  Satoshi Nakagawa <artension@gmail.com>

	Implementing nick right-click menu on log views.

2007-09-03  Satoshi Nakagawa <artension@gmail.com>

	Changed to support new implementation of NSArray and NSDictionary.

2007-09-02  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, application crashes on pushed ok button on a server properties dialog.

2007-09-01  Satoshi Nakagawa <artension@gmail.com>

	Changed to try RUBYCOCOA_THREAD_HOOK_DISABLE = 1.

2007-08-30  Satoshi Nakagawa <artension@gmail.com>

	Changed to return the same objects in NSOutlineView datasource.

2007-08-29  Satoshi Nakagawa <artension@gmail.com>

	Added confirmation on deleting a server from menu.
	Fixed a bug, application crashes when clicking copy menu item in context menus.

2007-08-29  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, the server item in the tree should be open when created the first child.
	Fixed a bug, log view should scroll to the bottom when it finished loading.

2007-08-26  Satoshi Nakagawa <artension@gmail.com>

	Replaced NSData#bytes.bytestr for NSData#rubyString.

2007-08-24  Satoshi Nakagawa <artension@gmail.com>

	Added menus, mark and clear scrollback.
	Changed max lines of log view to 3000.

2007-08-19  Satoshi Nakagawa <artension@gmail.com>
